# models/comment.go
@@ -10,7 +10,7 @@ type Comment struct {
 	Id       			int64			`description:"id" json:"id" xorm:"pk autoincr"`
 	Type       			int 			`description:"类型，1是朋友圈评论" json:"type"`
 	TypeId	 			int64 			`description:"类型id" json:"typeId"`
-	ReplyId   			int64 			`description:"回复id" json:"replyId"`
+	ReplyCommentId		int64 			`description:"回复评论id" json:"replyCommentId"`
 	Content    			string 			`description:"评论内容" json:"content"`
 	SenderUid  			int64 			`description:"评论发送人" json:"senderUid"`
 	ReceiverUid			int64 			`description:"评论接收人" json:"receiverUid"`
